--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       window.open('https://sistemas2.municallao.gob.pe/ords/f?p=124:4', '_blank');
     }
     function redirigirSUNARP() {
-      window.open('https://www.sunarp.gob.pe/ConsultaVehicular/', '_blank');
+      window.open('https://consultavehicular.sunarp.gob.pe/consulta-vehicular/inicio/', '_blank');
     }
     function redirigirSOAT() {
-      window.open('https://www.apeseg.org.pe/consulta-soat/', '_blank');
+      window.open('https://www.apeseg.org.pe/consultas-soat/', '_blank');
     }
     function contactarWhatsApp() {
       const placa = document.getElementById('placa').value.trim().toUpperCase();
